--- a/app/src/main/res/layout/activity_timeline.xml
+++ b/app/src/main/res/layout/activity_timeline.xml
@@ -7,13 +7,19 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <fragment
-        android:layout_width="wrap_content"
+    <com.astuetz.PagerSlidingTabStrip
+        android:id="@+id/tabs"
+        app:pstsShouldExpand="true"
+        app:pstsTextAllCaps="true"
+        android:layout_width="match_parent"
+        app:pstsIndicatorColor="@color/accent"
+        app:pstsIndicatorHeight="@dimen/tabs_indicator_height"
+        android:layout_height="48dp" />
+
+    <android.support.v4.view.ViewPager
+        android:id="@+id/viewPager"
+        android:layout_below="@id/tabs"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:name="com.thunder.simplytweet.fragments.TweetsListFragment"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:id="@+id/fragment_timeline"
-        tools:layout="@layout/fragment_tweets_list" />
+        android:background="@android:color/white" />
 </RelativeLayout>
