--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -1,7 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:tools="http://schemas.android.com/tools">
+    <data>
+        <variable name="user" type="com.thunder.simplytweet.models.User" />
+    </data>
+<RelativeLayout
     android:id="@+id/activity_profile"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -29,6 +34,7 @@
 
         <TextView
             android:id="@+id/profile_user_name"
+            android:text="@{user.name}"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
@@ -38,6 +44,7 @@
 
         <TextView
             android:id="@+id/profile_user_tagline"
+            android:text="@{user.tagline}"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignEnd="@+id/profile_user_name"
@@ -58,6 +65,7 @@
 
             <TextView
                 android:id="@+id/profile_following_count"
+                android:text='@{user.followingCount.toString() + " Following"}'
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -65,6 +73,7 @@
 
             <TextView
                 android:id="@+id/profile_follower_count"
+                android:text='@{user.followerCount.toString() + " Followers"}'
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1" />
@@ -84,3 +93,4 @@
 
 
 </RelativeLayout>
+</layout>
