--- a/app/src/main/res/layout/item_tweet.xml
+++ b/app/src/main/res/layout/item_tweet.xml
@@ -80,32 +80,34 @@
         android:layout_marginTop="@dimen/activity_horizontal_margin"
         android:layout_alignLeft="@id/user_name"
         android:layout_below="@+id/mediaImage">
-        <ImageButton
+        <Button
             android:id="@+id/tweet_reply"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="32dp"
-            android:layout_marginRight="32dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
             android:layout_weight="1"
             android:background="@null"
-            app:srcCompat="@drawable/ic_action_reply"/>
-        <ImageButton
+            android:drawableLeft="@drawable/ic_action_reply"/>
+        <Button
             android:id="@+id/tweet_retweet"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="32dp"
-            android:layout_marginRight="32dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
             android:layout_weight="1"
             android:background="@null"
-            app:srcCompat="@drawable/ic_action_retweet" />
-        <ImageButton
+            android:drawableLeft="@drawable/ic_action_retweet"
+            android:text="0"/>
+        <Button
             android:id="@+id/tweet_heart"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="32dp"
-            android:layout_marginRight="32dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
             android:layout_weight="1"
             android:background="@null"
-            app:srcCompat="@drawable/ic_action_heart"  />
+            android:drawableLeft="@drawable/ic_action_heart"
+            android:text="0"/>
     </LinearLayout>
 </RelativeLayout>
