--- a/app/src/main/res/menu/menu_timeline.xml
+++ b/app/src/main/res/menu/menu_timeline.xml
@@ -19,4 +19,10 @@
         android:icon="@drawable/ic_action_profile"
         app:showAsAction="always"
         android:title="Profile" />
+    <item
+        android:id="@+id/action_search"
+        android:icon="@drawable/ic_action_search"
+        android:title="Search"
+        app:showAsAction="always|collapseActionView"
+        app:actionViewClass="android.support.v7.widget.SearchView"/>
 </menu>
