--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -6,91 +6,109 @@
     <data>
         <variable name="user" type="com.thunder.simplytweet.models.User" />
     </data>
-    <RelativeLayout
+    <android.support.design.widget.CoordinatorLayout
         android:id="@+id/activity_profile"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:paddingBottom="@dimen/activity_vertical_margin"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin"
         tools:context="com.thunder.simplytweet.activities.ProfileActivity">
 
-        <RelativeLayout
+        <android.support.design.widget.AppBarLayout
+            android:id="@+id/profile_user_header"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/profile_user_header"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true">
-            <ImageView
-                android:id="@+id/profile_user_image"
-                android:layout_width="75dp"
-                android:layout_height="75dp"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentTop="true"
-                app:srcCompat="@drawable/ic_launcher" />
-
-            <TextView
-                android:id="@+id/profile_user_name"
-                android:text="@{user.name}"
+            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+            android:fitsSystemWindows="true"
+            >
+            <android.support.design.widget.CollapsingToolbarLayout
+                android:id="@+id/collapsing"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignParentTop="true"
-                android:layout_toEndOf="@+id/profile_user_image"
-                android:layout_toRightOf="@+id/profile_user_image"
-                />
-
-            <TextView
-                android:id="@+id/profile_user_tagline"
-                android:text="@{user.tagline}"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignEnd="@+id/profile_user_name"
-                android:layout_alignRight="@+id/profile_user_name"
-                android:layout_below="@+id/profile_user_name"
-                android:layout_toRightOf="@+id/profile_user_image"
-                android:layout_toEndOf="@+id/profile_user_image" />
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
-                android:layout_below="@+id/profile_user_image"
-                android:layout_marginBottom="@dimen/activity_horizontal_margin"
-                android:layout_marginTop="@dimen/activity_horizontal_margin"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/profile_following_count"
-                    android:text='@{user.followingCount.toString() + " Following"}'
-                    android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:fitsSystemWindows="true"
+                app:layout_scrollFlags="scroll|exitUntilCollapsed"
+                app:contentScrim="?attr/colorPrimary"
+                app:expandedTitleMarginStart="48dp"
+                app:expandedTitleMarginEnd="64dp"
+                app:title="@string/app_name"
+                >
+                <RelativeLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:onClick="onFollowingsClick"
-                    />
+                    android:layout_alignParentTop="true"
+                    android:layout_alignParentLeft="true"
+                    android:padding="16dp"
+                    android:layout_alignParentStart="true">
+                    <ImageView
+                        android:id="@+id/profile_user_image"
+                        android:layout_width="75dp"
+                        android:layout_height="75dp"
+                        android:layout_alignParentLeft="true"
+                        android:layout_alignParentStart="true"
+                        android:layout_alignParentTop="true"
+                        app:srcCompat="@drawable/ic_launcher" />
 
-                <TextView
-                    android:id="@+id/profile_follower_count"
-                    android:text='@{user.followerCount.toString() + " Followers"}'
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:onClick="onFollowersClick"/>
-            </LinearLayout>
+                    <TextView
+                        android:id="@+id/profile_user_name"
+                        android:text="@{user.name}"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentTop="true"
+                        android:layout_marginLeft="8dp"
+                        android:layout_toEndOf="@+id/profile_user_image"
+                        android:layout_toRightOf="@+id/profile_user_image"
+                        />
 
-        </RelativeLayout>
+                    <TextView
+                        android:id="@+id/profile_user_tagline"
+                        android:text="@{user.tagline}"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_alignEnd="@+id/profile_user_name"
+                        android:layout_alignRight="@+id/profile_user_name"
+                        android:layout_below="@+id/profile_user_name"
+                        android:layout_alignLeft="@+id/profile_user_name"
+                        android:layout_alignStart="@+id/profile_user_name" />
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_alignLeft="@id/profile_user_name"
+                        android:layout_below="@+id/profile_user_image"
+                        android:layout_marginBottom="@dimen/activity_horizontal_margin"
+                        android:layout_marginTop="@dimen/activity_horizontal_margin"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:id="@+id/profile_following_count"
+                            android:text='@{user.followingCount.toString() + " Following"}'
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:onClick="onFollowingsClick"
+                            />
+
+                        <TextView
+                            android:id="@+id/profile_follower_count"
+                            android:text='@{user.followerCount.toString() + " Followers"}'
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:onClick="onFollowersClick"/>
+                    </LinearLayout>
+
+                </RelativeLayout>
+            </android.support.design.widget.CollapsingToolbarLayout>
+        </android.support.design.widget.AppBarLayout>
 
         <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior"
             android:id="@+id/profile_user_timeline"
             android:layout_below="@+id/profile_user_header">
 
         </FrameLayout>
-    </RelativeLayout>
+    </android.support.design.widget.CoordinatorLayout>
 </layout>
